syntax = "proto3";

package aggregate;

message UploadDocReq {
    int64 doc_id = 1 [json_name = "doc_id"];
}

message UploadDocRes {
    int64 doc_id = 1 [json_name = "doc_id"];
}